# kbsr

./: .gitattributes  Cargo.toml  LICENSE  README.md  TODO  flake.nix
.agents/skills/releasing/: SKILL.md
.github/workflows/: ci.yml  release.yml
assets/demo/: kbsr-demo.cast
docs/: configuration.md  decks.md  issues.md  scheduling.md  usage.md
src/: app.rs  config.rs  deck.rs  keybind.rs  main.rs  matcher.rs  scheduler.rs  storage.rs  ui.rs
