[package]
name = "kbsr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
crossterm = "0.29.0"
dirs = "6.0.0"
fsrs = "5.2.0"
ratatui = "0.30.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[dev-dependencies]
tempfile = "3.24.0"
