[package]
name = "kbsr"
version = "0.1.10"
edition = "2024"
description = "Learn keyboard shortcuts through spaced repetition in the terminal"
license = "MIT"
repository = "https://github.com/dbalmain/kbsr"
readme = "README.md"
keywords = ["spaced-repetition", "keyboard", "keybinds", "tui", "learning"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
crossterm = "0.29.0"
dirs = "6.0.0"
fsrs = "5.2.0"
rand = "0.10"
ratatui = "0.30.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4.3"

[dev-dependencies]
tempfile = "3.24.0"
